src/main/java/com/test/coursemanagementspring/core/errors/AlreadyExistsException.java
package com.test.coursemanagementspring.core.errors;

public class AlreadyExistsException extends RuntimeException{
    public AlreadyExistsException(String message) {
        super(message);
    }
}
